--- a/app/index.html
+++ b/app/index.html
@@ -4,9 +4,65 @@ layout: ./app/layout.ejs
 engine: ejs
 current: index
 ---
+<div class="banner">
+  <div class="banner-container">
+    <p class="bold">
+      Here’s
+      <h1>JOANNE</h1>
+      Founder of “XXXD Official’’<br/> & Graphic Designer
+    </p>
+    <ul class="d-flex mt-5">
+      <li class="mr-2"><a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="60" height="60" viewBox="0 0 60 60"><defs><style>.a{fill:#891818;}.b{fill:#fff;fill-rule:evenodd;}</style></defs><path class="a" d="M60,46.535A13.458,13.458,0,0,1,46.535,60H13.465A13.466,13.466,0,0,1,0,46.535V13.465A13.466,13.466,0,0,1,13.465,0h33.07A13.458,13.458,0,0,1,60,13.465Z"/><g transform="translate(13.519 19.299)"><path class="b" d="M114.5,185.563V164.19c.035,0,.07-.012.1-.012,3.461,0,6.922-.012,10.4.012a8.069,8.069,0,0,1,3.31.653,4.832,4.832,0,0,1,2.972,3.951,6.026,6.026,0,0,1-.245,2.913,3.966,3.966,0,0,1-1.876,2.156c-.128.07-.268.151-.408.233a.747.747,0,0,0,.186.07,4.635,4.635,0,0,1,2.983,3.648,6.426,6.426,0,0,1-.513,4.137,5.946,5.946,0,0,1-4.568,3.391,16.448,16.448,0,0,1-2.727.221H114.5Zm4.941-3.718c.047,0,.082.012.117.012,1.5,0,3,.012,4.5-.012a7.73,7.73,0,0,0,1.364-.14,2.388,2.388,0,0,0,2-1.946,4.18,4.18,0,0,0,.093-1.2,2.263,2.263,0,0,0-1.573-2.144,4.633,4.633,0,0,0-1.538-.256c-1.632-.012-3.263-.012-4.895-.012-.023,0-.035.012-.07.012Zm0-9.23h.093c1.515,0,3.042.012,4.568,0a4.1,4.1,0,0,0,1.993-.455,1.73,1.73,0,0,0,.9-1.119,3.439,3.439,0,0,0,.082-1.294,1.773,1.773,0,0,0-1.363-1.6,7.718,7.718,0,0,0-2.121-.256c-1.329-.012-2.669,0-4,0h-.128C119.441,169.48,119.441,171.042,119.441,172.615Z" transform="translate(-114.5 -164.175)"/><path class="b" d="M294.076,216.19H282.923c.023.221.035.443.07.664a4.229,4.229,0,0,0,.35,1.247,3.258,3.258,0,0,0,2.459,1.818,4.375,4.375,0,0,0,1.865-.012,2.932,2.932,0,0,0,2.039-1.538.2.2,0,0,1,.21-.117h3.962c-.047.21-.093.42-.14.606a5.277,5.277,0,0,1-1.224,2.016,6.844,6.844,0,0,1-4.312,2.261,9.388,9.388,0,0,1-3.986-.21,7.856,7.856,0,0,1-3.566-2.109,6.108,6.108,0,0,1-1.492-2.972,11.487,11.487,0,0,1,.175-5.862,6.662,6.662,0,0,1,5.524-4.836,8.744,8.744,0,0,1,5.058.5,6.454,6.454,0,0,1,3.31,3.17,7.373,7.373,0,0,1,.793,2.972c.047.758.047,1.527.07,2.3A.259.259,0,0,0,294.076,216.19Zm-4.172-2.645c0-.023.012-.047,0-.07-.012-.152-.035-.291-.058-.443a3.037,3.037,0,0,0-1.946-2.471,3.912,3.912,0,0,0-1.795-.245,2.967,2.967,0,0,0-2.7,1.865,9.617,9.617,0,0,0-.326.979c-.035.128-.047.256-.07.385Z" transform="translate(-259.709 -201.993)"/><path class="b" d="M307,174.371V171.9h8.589v2.471Z" transform="translate(-284.566 -171)"/></g></svg></a></li>
+      <li class="mr-2"><a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="60" height="60" viewBox="0 0 60 60"><defs><style>.a{fill:#891818;}.b{fill:#fff;fill-rule:evenodd;}</style></defs><path class="a" d="M60,46.535A13.466,13.466,0,0,1,46.535,60H13.465A13.473,13.473,0,0,1,0,46.535V13.465A13.473,13.473,0,0,1,13.465,0h33.07A13.473,13.473,0,0,1,60,13.465Z"/><path class="b" d="M197.049,123.451c1-.035,2-.012,3.007-.012h.408v-5.263c-.536-.059-1.1-.13-1.655-.153-1.026-.047-2.051-.094-3.088-.071a7.546,7.546,0,0,0-4.347,1.354,6.551,6.551,0,0,0-2.61,4.392,16.28,16.28,0,0,0-.186,2.261c-.023,1.177,0,2.355,0,3.544v.447H183.6v5.875h4.953V150.59H194.6V135.837h4.941c.256-1.954.5-3.885.758-5.9h-1.107c-1.41.012-4.627,0-4.627,0s.012-2.908.047-4.18C194.66,124.028,195.685,123.5,197.049,123.451Z" transform="translate(-162.037 -104.201)"/></svg></a></li>
+      <li class="mr-2"><a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="60" height="60" viewBox="0 0 60 60"><defs><style>.a{fill:#891818;}.b{fill:#fff;}</style></defs><path class="a" d="M60,46.3A13.694,13.694,0,0,1,46.3,60H13.7A13.694,13.694,0,0,1,0,46.3V13.711A13.714,13.714,0,0,1,13.711,0H46.09A13.9,13.9,0,0,1,60,13.91Z"/><g transform="translate(8.216 8.228)"><path class="b" d="M100.645,70.6H83.923A13.427,13.427,0,0,0,70.5,84.023v16.711a13.409,13.409,0,0,0,13.423,13.411h16.711a13.407,13.407,0,0,0,13.411-13.411V84.023A13.392,13.392,0,0,0,100.645,70.6Zm9.23,28.525a10.836,10.836,0,0,1-10.839,10.839H85.532A10.836,10.836,0,0,1,74.692,99.125V85.62A10.836,10.836,0,0,1,85.532,74.781H99.037A10.843,10.843,0,0,1,109.876,85.62Z" transform="translate(-70.5 -70.6)"/><path class="b" d="M174.686,159a11.553,11.553,0,1,0,11.386,11.552A11.464,11.464,0,0,0,174.686,159Zm0,18.493a6.953,6.953,0,1,1,6.852-6.952A6.9,6.9,0,0,1,174.686,177.493Z" transform="translate(-152.309 -148.698)"/><path class="b" d="M332.88,135.5a2.89,2.89,0,1,1-2.89-2.9A2.89,2.89,0,0,1,332.88,135.5Z" transform="translate(-296.931 -125.31)"/></g></svg></a></l>
+      <li><a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="60" height="60" viewBox="0 0 60 60"><defs><style>.a{fill:#891818;}.b{fill:#fff;fill-rule:evenodd;}</style></defs><path class="a" d="M60,46.535A13.466,13.466,0,0,1,46.535,60H13.465A13.473,13.473,0,0,1,0,46.535V13.465A13.473,13.473,0,0,1,13.465,0h33.07A13.473,13.473,0,0,1,60,13.465Z"/><path class="b" d="M116.107,178.2a3.933,3.933,0,0,1-2.589-2.494c-1.118-3.053-1.448-15.826.706-18.343a4.251,4.251,0,0,1,2.825-1.492c5.814-.618,23.81-.536,25.882.21a4.05,4.05,0,0,1,2.542,2.424c1.224,3.158,1.271,14.649-.165,17.691a3.871,3.871,0,0,1-1.824,1.818C141.318,179.147,118.968,179.136,116.107,178.2Zm9.251-5.99,10.487-5.384-10.487-5.419Z" transform="translate(-99.513 -137.179)"/></svg></a></li>
+    </ul>
+  </div>
+</div>
+<div class="about text-center">
+  <div class="container">
+    <h2>About</h2>
+    <img src="/assets/images/photo.png" alt="JOANNE Chen photo">
+    <ul>
+      <li>Joanne Chen <br/> 1997/10/10</li>
+      <li>National Hex School Normal University <br>Department of Visual Design</li>
+    </ul>
+    <hr/>
+    <ul>
+      <li><span class="dot"></span>Founder of ‘’XXXD Official’’</li>
+      <li><span class="dot"></span>Graphic Designer</li>
+      <li><span class="dot"></span>Graphic Intern of Hex School</li>
+    </ul>
+  </div>
 
-<h1>
-  這是一段話
-</h1>
-
-<div class="box"></div>
+</div>
+<div class="brand text-center">
+  <div class="container">
+    <h2>My Brand ‘’XXXD’’</h2>
+    <ul>
+      <li>Just Keep XXXD Everyday</li>
+      <li>2020 年創立的個人服飾品牌<br/> 引領叛逆少年開啟與社會對話的窗口<br/> 主打概念潮流T-Shirt</li>
+    </ul>
+    <ul class="d-flex brand-img">
+      <li><img src="/assets/images/brand_img1.png" alt="brand_img1"></li>
+      <li class="mr-3"><img src="/assets/images/brand_img2.png" alt="brand_img2"></li>
+      <li><img src="/assets/images/brand_img3.png" alt="brand_img3"></li>
+    </ul>
+  </div>
+</div>
+<div class="works">
+  <div class="container text-center">
+    <h2>Other Works</h2>
+    <p>2016-2020 年累積的作品 <br/> 海報/廣告/攝影/LOGO/3D</p>
+    <ul class="wrap">
+      <li class="mr-3"><img src="/assets/images/work_img1.png" alt="work_img1"><p>海報設計/2017</p></li>
+      <li class="mr-3"><img src="/assets/images/work_img2.png" alt="work_img2"><p>海報設計/2018</p></li>
+      <li><img src="/assets/images/work_img3.png" alt="work_img3"><p>海報設計/2018</p></li>
+      <li class="mr-3"><img src="/assets/images/work_img4.png" alt="work_img4"><p>概念攝影/2018</p></li>
+      <li><img src="/assets/images/work_img5.png" alt="work_img5"><p>概念攝影/2018</p></li>
+      <li class="mr-3"><img src="/assets/images/work_img6.png" alt="work_img6"><p>sasa 酒標設計/2019</p></li>
+      <li class="mr-3"><img src="/assets/images/work_img7.png" alt="work_img7"><p>攝影創作/2018</p></li>
+      <li><img src="/assets/images/work_img8.png" alt="work_img8"><p>官網設計/2020</p></li>
+    </ul>
+  </div>
+</div>
