--- a/app/index.html
+++ b/app/index.html
@@ -44,9 +44,9 @@ current: index
       <li>2020 年創立的個人服飾品牌<br/> 引領叛逆少年開啟與社會對話的窗口<br/> 主打概念潮流T-Shirt</li>
     </ul>
     <ul class="d-flex brand-img">
-      <li><img src="/assets/images/brand_img1.png" alt="brand_img1"></li>
-      <li class="mr-3"><img src="/assets/images/brand_img2.png" alt="brand_img2"></li>
-      <li><img src="/assets/images/brand_img3.png" alt="brand_img3"></li>
+      <li><img src="../assets/images/brand_img1.png" alt="brand_img1"></li>
+      <li class="mr-3"><img src="../assets/images/brand_img2.png" alt="brand_img2"></li>
+      <li><img src="./assets/images/brand_img3.png" alt="brand_img3"></li>
     </ul>
   </div>
 </div>
@@ -55,14 +55,14 @@ current: index
     <h2>Other Works</h2>
     <p>2016-2020 年累積的作品 <br/> 海報/廣告/攝影/LOGO/3D</p>
     <ul class="wrap">
-      <li class="mr-3"><img src="/assets/images/work_img1.png" alt="work_img1"><p>海報設計/2017</p></li>
-      <li class="mr-3"><img src="/assets/images/work_img2.png" alt="work_img2"><p>海報設計/2018</p></li>
-      <li><img src="/assets/images/work_img3.png" alt="work_img3"><p>海報設計/2018</p></li>
-      <li class="mr-3"><img src="/assets/images/work_img4.png" alt="work_img4"><p>概念攝影/2018</p></li>
-      <li><img src="/assets/images/work_img5.png" alt="work_img5"><p>概念攝影/2018</p></li>
-      <li class="mr-3"><img src="/assets/images/work_img6.png" alt="work_img6"><p>sasa 酒標設計/2019</p></li>
-      <li class="mr-3"><img src="/assets/images/work_img7.png" alt="work_img7"><p>攝影創作/2018</p></li>
-      <li><img src="/assets/images/work_img8.png" alt="work_img8"><p>官網設計/2020</p></li>
+      <li class="mr-3"><img src="../assets/images/work_img1.png" alt="work_img1"><p>海報設計/2017</p></li>
+      <li class="mr-3"><img src="../assets/images/work_img2.png" alt="work_img2"><p>海報設計/2018</p></li>
+      <li><img src="../assets/images/work_img3.png" alt="work_img3"><p>海報設計/2018</p></li>
+      <li class="mr-3"><img src="../assets/images/work_img4.png" alt="work_img4"><p>概念攝影/2018</p></li>
+      <li><img src="../assets/images/work_img5.png" alt="work_img5"><p>概念攝影/2018</p></li>
+      <li class="mr-3"><img src="../assets/images/work_img6.png" alt="work_img6"><p>sasa 酒標設計/2019</p></li>
+      <li class="mr-3"><img src="../assets/images/work_img7.png" alt="work_img7"><p>攝影創作/2018</p></li>
+      <li><img src="../assets/images/work_img8.png" alt="work_img8"><p>官網設計/2020</p></li>
     </ul>
   </div>
 </div>
